# tap-google-drive

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  setup.py  tox.ini
scripts/: test_client.py
tap_google_drive/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
